compiler-core/src/type_/snapshots/gleam_core__type___tests__const_record_update_fieldless_warning.snap
---
source: compiler-core/src/type_/tests.rs
expression: "pub type Animal { Animal(species: String) }\n\n        pub const alice = Animal(\"Cat\")\n        pub const dog = Animal(..alice)"
---
----- SOURCE CODE
pub type Animal { Animal(species: String) }

        pub const alice = Animal("Cat")
        pub const dog = Animal(..alice)

----- WARNING
warning: Fieldless record update
  ┌─ /src/warning/wrn.gleam:4:25
  │
4 │         pub const dog = Animal(..alice)
  │                         ^^^^^^^^^^^^^^^ This record update doesn't change any fields

Hint: Add some fields to change or replace it with the record itself.
