compiler-core/src/type_/snapshots/gleam_core__type___tests__double_unary.snap
---
source: compiler-core/src/type_/tests.rs
expression: "pub fn double_unary() {\n        let x = --7\n        let y = --x\n        let _ = !!True\n    }"
---

warning: Unnecessary double unary expression
  ┌─ /src/warning/wrn.gleam:2:17
  │
2 │         let x = --7
  │                 ^^^ Double unary expression

Hint: If you're trying to type cast, look for a `from_<type>` function in the target type's module

warning: Unnecessary double unary expression
  ┌─ /src/warning/wrn.gleam:3:17
  │
3 │         let y = --x
  │                 ^^^ Double unary expression

Hint: If you're trying to type cast, look for a `from_<type>` function in the target type's module

warning: Unused variable
  ┌─ /src/warning/wrn.gleam:3:13
  │
3 │         let y = --x
  │             ^ This variable is never used.

Hint: You can ignore it with an underscore: `_y`.

