compiler-core/src/type_/snapshots/gleam_core__type___tests__redundant_list_prepend_constant.snap
---
source: compiler-core/src/type_/tests.rs
expression: "const wibble = [1, 2]\nconst wobble = [..wibble]"
---
----- SOURCE CODE
const wibble = [1, 2]
const wobble = [..wibble]

----- ERROR
error: Redundant list prepend
  ┌─ /src/one/two.gleam:2:16
  │
2 │ const wobble = [..wibble]
  │                ^^^^^^^^^^ This prepend does nothing

See: https://tour.gleam.run/basics/lists/

Hint: `list` can be used directly instead of `[..list]`
