compiler-core/src/type_/snapshots/gleam_core__type___tests__redundant_list_prepend_variable.snap
---
source: compiler-core/src/type_/tests.rs
expression: "fn main() {\n  let wibble = [1, 2]\n  let wobble = [..wibble]\n}"
---
----- SOURCE CODE
fn main() {
  let wibble = [1, 2]
  let wobble = [..wibble]
}

----- ERROR
error: Redundant list prepend
  ┌─ /src/one/two.gleam:3:16
  │
3 │   let wobble = [..wibble]
  │                ^^^^^^^^^^ This prepend does nothing

See: https://tour.gleam.run/basics/lists/

Hint: `wibble` can be used directly instead of `[..wibble]`
