compiler-core/src/type_/snapshots/gleam_core__type___tests__warning_many_at_same_time.snap
---
source: compiler-core/src/type_/tests.rs
expression: "\nfn foo() { todo }\nfn main() { let five = 5 }"
---

warning: Todo found
  ┌─ /src/warning/wrn.gleam:1:5
  │
1 │ todo
  │       Todo found

This code will crash if it is run. Be sure to remove this todo before running your program.

warning: Unused variable
  ┌─ /src/warning/wrn.gleam:3:17
  │
3 │ fn main() { let five = 5 }
  │                 ^^^^ This variable is never used.

Hint: You can ignore it with an underscore: `_five`.

warning: Unused private function
  ┌─ /src/warning/wrn.gleam:3:1
  │
3 │ fn main() { let five = 5 }
  │ ^^^^^^^^^ This private function is never used.

Hint: You can safely remove it.

warning: Unused private function
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ fn foo() { todo }
  │ ^^^^^^^^ This private function is never used.

Hint: You can safely remove it.

